--- a/style.css
+++ b/style.css
@@ -27,11 +27,54 @@
     cursor: pointer;
 }
 
+.show-menu .hamburguer {
+    right: 16rem;
+}
+
 .line {
     width: 100%;
     height: .1rem;
     background-color: #fff;
     box-shadow: 0.1rem 0.1rem 1px #000;
+    transition: transform 1s;
+}
+.show-menu #Line1 {
+    transform: rotate(45deg) translate(.3rem, .35rem);
+}
+
+.show-menu #Line2 {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #Line3 {
+    transform: rotate(-45deg) translate(.3rem, -.35rem);
+}
+.hamburguer span{
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    background-color: #a044ff;
+    align-items: center;
+    color: #fff;
+    font-family: var(--font-action);
+    opacity: 0;
+}
+
+.hamburguer span::before{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #a044ff;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+.show-menu .hamburguer:hover span{
+    opacity: 1;
 }
 
 header {
@@ -131,8 +174,14 @@ header {
     background-color: #fff;
     position: fixed;
     top: 0;
-    right: 0;
+    right: -20rem;
+    transition: all 1s;
 }
+.show-menu .sidebar {
+    right: 0;
+
+}
+
 .menu {
     position: absolute;
     top: 40%;
