--- a/style.css
+++ b/style.css
@@ -270,6 +270,7 @@ header {
 
 .sessao-conhecimentos {
     background-color: #f5f5f5;
+    text-align: center;
 }
 
 .sessao-header{
@@ -305,5 +306,16 @@ header {
 .conhecimento-text {
     font-family: var(--font-secundary);
     margin-top: 1rem;
+}
+
+.conhecimentos-img-wrapper {
+    grid-column: 7 / 11;
+    grid-row: 2 / 6 ;
+    width: 100%;
+}
+
+.conhecimentos-img-wrapper img {
+    object-fit: cover;
+    width: 100%;
 }
 
