--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ header {
     top: 0;
     right: -20rem;
     transition: all 1s;
+    z-index: 99;
 }
 .show-menu .sidebar {
     right: 0;
@@ -322,6 +323,8 @@ header {
 .projetos {
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
+    height: 70vh;
 }
 
 .card {
@@ -406,5 +409,111 @@ header {
     bottom: 2rem;
     opacity: 1;
     visibility: visible;
+}
+
+.sessao-contato {
+    width: 100%;
+    height: 100vh;
+    background-color: #272727;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contato-wrapper {
+    width: 60%;
+    height: 30rem;
+    display: flex;
+    box-shadow: 0 2rem 3rem rgba(0,0,0, .5);
+}
+
+.contato-left {
+    width: 35%;
+    background: 
+        linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
+        url(imagens/Contato.jpg);
+}
+
+.contato-right {
+    width: 65%;
+    background-color: #eee;
+    padding: 1 rem 3rem 3rem 3rem;
+}
+
+.sessao-contato h1 {
+    width: 100%;
+    text-align: center;
+    font-family: var(--font-primary);
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+
+}
+
+.sessao-contato form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input-group {
+    position: relative;
+}
+
+.field {
+    background: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1.5rem;
+    font-family: var(--font-secundary);
+    border-bottom: 2px dashed #636363;
+    height: 3rem;
+    outline: none;
+    margin: 2rem 0;
+}
+
+.input-group textarea {
+    max-width: 25rem;
+    max-height: 3rem;
+}
+
+.field-label {
+    position: absolute;
+    left: 0;
+    top: 3rem;
+    font-size: 1.2rem;
+    font-family: var(--font-secundary);
+    text-transform: uppercase;
+    transition: all 0.3s;
+} 
+
+.field:focus ~ label {
+    top: 0;
+    font-size: 1rem;
+}
+
+.field:focus {
+    border-bottom: 1px solid;
+}
+
+.btn-submit {
+    background: #6a3093;
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to left, #a044ff, #6a3093);
+    font-family: var(--font-action);
+    font-size: 1rem;
+    color: #eee;
+    border-radius: .5rem;
+    border: none;
+    box-shadow: 0 .1rem .8rem rgba(0,0,0,0.4);
+    width: 80%;
+    height: 2rem;
+    text-transform: uppercase;
+}
+
+.btn-submit:hover {
+    color: black;
+    cursor: pointer;
 }
 
