--- a/Em produção.css
+++ b/Em produção.css
@@ -14,6 +14,9 @@
     --font-action: "Mulish", serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 
 header {
     width: 100%;
@@ -49,8 +52,8 @@ header {
 
 .banner{
     position: absolute;
-    top:25%;
-    left:30%;
+    top:30%;
+    left:15%;
 }
 .banner h1{
     color: #ffffff;
@@ -104,75 +107,4 @@ header {
 .banner button:hover{
     color: #000;
 
-}
-form {
-    /* Apenas para centralizar o form na página */
-    margin: 0 auto;
-    width: 400px;
-    /* Para ver as bordas do formulário */
-    padding: 1em;
-    padding-left: 0%;
-    margin-left: 0%;
-    border: 1px solid #CCC;
-    border-radius: 1em;
-    animation: moveBanner 1s 1.1s forwards;
-    opacity: 0;
-}
-
-form div + div {
-    margin-top: 1em;
-}
-
-label {
-    /*Para ter certeza que todas as labels tem o mesmo tamanho e estão propriamente alinhadas */
-    display: inline-block;
-    width: 90px;
-    text-align: center;
-    font-family:var(--font-action);
-    color: #fff;
-}
-
-input, textarea {
-    /* Para certificar-se que todos os campos de texto têm as mesmas configurações de fonte. Por padrão, textareas ter uma fonte monospace*/
-    font-family:var(--font-action);
-
-    /* Para dar o mesmo tamanho a todos os campo de texto */
-    width: 300px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-
-    /* Para harmonizar o look & feel das bordas nos campos de texto*/
-    border: 1px solid #999;
-}
-
-input:focus, textarea:focus {
-    /* Dar um pouco de destaque nos elementos ativos */
-    border-color: #000;
-}
-
-textarea {
-    /* Para alinhar corretamente os campos de texto de várias linhas com sua label*/
-    vertical-align: top;
-
-    
-
-    /* Para dar espaço suficiente para digitar algum texto */
-    height: 5em;
-
-    /* Para permitir aos usuários redimensionarem qualquer textarea verticalmente. Ele não funciona em todos os browsers */
-    resize: vertical;
-}
-
-.button {
-    /* Para posicionar os botões para a mesma posição dos campos de texto */
-    padding-left: 90px; /* mesmo tamanho que os elementos do tipo label */
-}
-button {
-    /* Esta margem extra representa aproximadamente o mesmo espaço que o espaço entre as labels e os seus campos de texto*/
-    margin-left: .5em;
-    
-}
-
-.buttoncadastre-se {
-    padding-left: 70%;
 }
